[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Common/ShakeSelector.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Common/SpinBoxPreventDnD.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Common/Characters/CharacterPicker.tscn" type="PackedScene" id=3]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox_Amplitude" type="SpinBox" parent="."]
margin_right = 74.0
margin_bottom = 40.0
min_value = 0.1
step = 0.1
value = 1.0
allow_greater = true
align = 1
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 78.0
margin_right = 155.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_left = 10

[node name="Title" type="Label" parent="MarginContainer2"]
margin_left = 10.0
margin_top = 13.0
margin_right = 77.0
margin_bottom = 27.0
text = "Amplitude"

[node name="Container" type="Container" parent="."]
margin_left = 159.0
margin_right = 189.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 0 )

[node name="SpinBox_Duration" type="SpinBox" parent="."]
margin_left = 193.0
margin_right = 267.0
margin_bottom = 40.0
min_value = 0.05
step = 0.05
value = 1.0
allow_greater = true
align = 1
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 271.0
margin_right = 334.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_left = 10

[node name="Title" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 13.0
margin_right = 63.0
margin_bottom = 27.0
text = "Seconds"

[node name="Container2" type="Container" parent="."]
margin_left = 338.0
margin_right = 368.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 0 )

[node name="CharacterPicker" parent="." instance=ExtResource( 3 )]
margin_left = 372.0
margin_right = 478.0
margin_bottom = 40.0

[connection signal="value_changed" from="SpinBox_Amplitude" to="." method="_on_SpinBox_Amplitude_value_changed"]
[connection signal="value_changed" from="SpinBox_Duration" to="." method="_on_SpinBox_Duration_value_changed"]
[connection signal="character_selected" from="CharacterPicker" to="." method="_on_CharacterPicker_character_selected"]
